# benchmarks

./: .gitignore  Makefile  README.md
caml/: files  files_dorder  safe.files  sat.files  unsafe.files
caml/lia/mochi/: a-init.spec  a-max.spec  queen.spec  sum.spec
caml/lia/termination/: Ackermann00.ml  Ackermann01.ml  Fibonacci00.ml  Fibonacci01.ml  Fibonacci02.ml  Fibonacci03.ml  McCarthy9100.ml  McCarthy9101.ml  McCarthy9102.ml  McCarthy9103.ml  indirect00.ml  indirect01.ml  indirect02.ml  indirect03.ml  indirectHO00.ml  indirectHO01.ml  indirectHO02.ml  indirectHO03.ml  toChurch00.ml  toChurch01.ml  toChurch02.ml  toChurch03.ml  toChurch04.ml  toChurch05.ml  up_down00.ml  up_down01.ml  up_down02.ml  up_down03.ml  up_down04.ml  up_down05.ml  (+10 more)
clauses/: files  files_adt  files_ea  files_red  files_red_ea  files_sred  unsat.files
runs/: caml.conf  eld.conf  fpice.conf  hoice.conf  z3.conf
runs/2017_08_24/: eld.data  fpice.data  mochi.data  z3_auto.data  z3_duality.data  z3_pdr.data  z3_spacer.data
runs/2017_08_25/: fpice_inactive_red.data  fpice_inactive_sred.data
runs/conf/: all_ml.conf  all_smt2.conf  dorder.conf  eld.conf  fpice.conf  hoice.conf  mochi.conf  z3.conf
runs/data/: eld.data  fpice.data  fpice_inactive_red.data  fpice_inactive_sred.data  hoice.data  hoice_debug.data  hoice_para.data  mochi.data  z3_auto.data  z3_duality.data  z3_pdr.data  z3_spacer.data
scripts/: check_smt2.sh  cleanup.sh  find_duplicates.sh  mk_graphs.sh  ml_smt2_diff.sh  prepare_dorder.sh  run_all.sh  to_smt2.sh
stats/: Cargo.toml  Readme.md
stats/src/: main.rs
(+1536 files in other folders)
