[package]
name = "stats"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "*"
clap = { version = "*", features = ["cargo"] }
walkdir = "*"
regex = "*"
lazy_static = "*"